--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     
-    <title>Portafolio | Huascar</title>
+    <title>Portafolio | Huasca</title>
 </head>
 <body>
     <header>
