--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     
     <meta charset="UTF-8">
@@ -8,7 +9,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     
-    <title>Portafolio | Huasca</title>
+    <title>Portafolio | Huascar</title>
 </head>
 <body>
     <header>
